package com.directi.training.isp.exercise_refactored;

public interface Lockable
{
    void lock();

    void unlock();
}
