package com.directi.training.isp.exercise_refactored;

public interface ProximityNotifiable
{
    void proximityCallback();
}
