package com.directi.training.isp.exercise_refactored;

public interface TimeOutNotifiable
{
    void timeOutCallback();
}
